--- a/view/admin_index.html
+++ b/view/admin_index.html
@@ -95,6 +95,15 @@
 			</ul>
 		</dd>
 	</dl>
+	</dl>
+		<dl id="menu-picture">
+			<dt><i class="Hui-iconfont">&#xe613;</i> 标签管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
+			<dd>
+				<ul>
+					<li><a data-href="/static/view/admin_tag.html" data-title="Dao标签" href="javascript:void(0)">Dao标签</a></li>
+			</ul>
+		</dd>
+	</dl>
 		<dl id="menu-comments">
 			<dt><i class="Hui-iconfont">&#xe622;</i> 其它管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
