--- a/view/admin_list.html
+++ b/view/admin_list.html
@@ -68,8 +68,7 @@
                         <th width="25"><input type="checkbox" name="" value=""></th>
                         <th width="80">ID</th>
                         <th>标题</th>
-                        <th width="80">分类</th>
-                        <th width="80">来源</th>
+                        <th width="80">场景</th>
                         <th width="120">更新时间</th>
                         <th width="75">浏览次数</th>
                         <th width="60">发布状态</th>
@@ -84,8 +83,7 @@
                         <td class="text-l"><u style="cursor:pointer" class="text-primary"
                                 onClick="article_edit('查看','article-zhang.html','10001')" title="查看">{{$v.Title}}</u>
                         </td>
-                        <td>{{$v.Typeid}}</td>
-                        <td>H-ui</td>
+                        <td>{{if eq $v.Scenes 2}} Dao文章 {{ else }} 普通文章{{end}}</td>
                         <td>{{$v.CreatedAt}}</td>
                         <td>{{$v.Click}}</td>
                         <td class="td-status"><span class="label label-success radius">已发布</span></td>
