--- a/view/admin_index.html
+++ b/view/admin_index.html
@@ -35,7 +35,7 @@
 				<ul class="cl">
 					<li class="dropDown dropDown_hover"><a href="javascript:;" class="dropDown_A"><i class="Hui-iconfont">&#xe600;</i> 新增 <i class="Hui-iconfont">&#xe6d5;</i></a>
 						<ul class="dropDown-menu menu radius box-shadow">
-							<li><a href="javascript:;" onclick="article_add('添加资讯','article-add.html')"><i class="Hui-iconfont">&#xe616;</i> 资讯</a></li>
+							<li><a href="javascript:;" onclick="article_add('添加文章','article-add.html')"><i class="Hui-iconfont">&#xe616;</i> 文章</a></li>
 								</ul>
 				</li>
 				<li class="dropDown dropDown_hover">
@@ -79,11 +79,11 @@
 <aside class="Hui-aside">
 	<div class="menu_dropdown bk_2">
 		<dl id="menu-article">
-			<dt><i class="Hui-iconfont">&#xe616;</i> 资讯管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
+			<dt><i class="Hui-iconfont">&#xe616;</i> 文章管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
-					<li><a data-href="/admin/list" data-title="资讯管理" href="javascript:void(0)">资讯列表</a></li>
-					<li><a data-href="/static/view/admin_addview.html" data-title="添加文章" href="javascript:void(0)">添加资讯</a></li>
+					<li><a data-href="/admin/list" data-title="文章管理" href="javascript:void(0)">文章列表</a></li>
+					<li><a data-href="/static/view/admin_addview.html" data-title="添加文章" href="javascript:void(0)">添加文章</a></li>
 			</ul>
 		</dd>
 	</dl>
@@ -121,7 +121,7 @@
 			</ul>
 		</dd>
 	</dl>
-		<dl id="menu-admin">
+		<!-- <dl id="menu-admin">
 			<dt><i class="Hui-iconfont">&#xe62d;</i> 管理员管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
@@ -137,7 +137,7 @@
 
 			</ul>
 		</dd>
-	</dl>
+	</dl> -->
 </div>
 </aside>
 <div class="dislpayArrow hidden-xs"><a class="pngfix" href="javascript:void(0);" onClick="displaynavbar(this)"></a></div>
@@ -207,7 +207,7 @@ function myselfinfo(){
 	});
 }
 
-/*资讯-添加*/
+/*文章-添加*/
 function article_add(title,url){
 	var index = layer.open({
 		type: 2,
