--- a/view/admin_list.html
+++ b/view/admin_list.html
@@ -21,7 +21,7 @@
 <script type="text/javascript" src="/static/lib/DD_belatedPNG_0.0.8a-min.js" ></script>
 <script>DD_belatedPNG.fix('*');</script>
 <![endif]-->
-    <title>资讯列表</title>
+    <title>文章列表</title>
 </head>
 
 <body>
@@ -29,9 +29,9 @@
         <i class="Hui-iconfont">&#xe67f;</i>
         首页
         <span class="c-gray en">&gt;</span>
-        资讯管理
+        文章管理
         <span class="c-gray en">&gt;</span>
-        资讯列表
+        文章列表
         <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px"
             href="javascript:location.replace(location.href);" title="刷新"><i class="Hui-iconfont">&#xe68f;</i></a>
     </nav>
@@ -50,15 +50,15 @@
             -
             <input type="text" onfocus="WdatePicker({ minDate:'#F{$dp.$D(\'logmin\')}',maxDate:'%y-%M-%d' })"
                 id="logmax" class="input-text Wdate" style="width:120px;">
-            <input type="text" name="" id="" placeholder=" 资讯名称" style="width:250px" class="input-text">
+            <input type="text" name="" id="" placeholder=" 文章名称" style="width:250px" class="input-text">
             <button name="" id="" class="btn btn-success" type="submit"><i class="Hui-iconfont">&#xe665;</i>
-                搜资讯</button>
+                搜文章</button>
         </div>
         <div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l"><a href="javascript:;" onclick="datadel()"
                     class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a>
-                <a class="btn btn-primary radius" data-title="添加资讯" data-href="/static/view/admin_addview.html"
+                <a class="btn btn-primary radius" data-title="添加文章" data-href="/static/view/admin_addview.html"
                     onclick="Hui_admin_tab(this)" href="javascript:;"><i class="Hui-iconfont">&#xe600;</i>
-                    添加资讯</a></span>
+                    添加文章</a></span>
             <span class="r">共有数据：<strong>{{.pageinfo.Num}}</strong> 条</span>
         </div>
         <div class="mt-20">
@@ -90,7 +90,7 @@
                         <td class="f-14 td-manage"><a style="text-decoration:none"
                                 onClick="article_stop(this,'{{$v.ID}}')" href="javascript:;" title="下架">
                                 <i class="Hui-iconfont">&#xe6de;</i></a> <a style="text-decoration:none" class="ml-5"
-                                onClick="article_edit('资讯编辑','/static/view/admin_addview.html?type=edit&id={{$v.ID}}','{{$v.ID}}')"
+                                onClick="article_edit('文章编辑','/static/view/admin_addview.html?type=edit&id={{$v.ID}}','{{$v.ID}}')"
                                 href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a>
                             <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')"
                                 href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a>
@@ -140,7 +140,7 @@
              ]
          }); */
 
-        /*资讯-添加*/
+        /*文章-添加*/
         function article_add(title, url, w, h) {
             var index = layer.open({
                 type: 2,
@@ -149,7 +149,7 @@
             });
             layer.full(index);
         }
-        /*资讯-编辑*/
+        /*文章-编辑*/
         function article_edit(title, url, id, w, h) {
             var index = layer.open({
                 type: 2,
@@ -158,7 +158,7 @@
             });
             layer.full(index);
         }
-        /*资讯-删除*/
+        /*文章-删除*/
         function article_del(obj, id) {
             layer.confirm('确认要删除吗？', function (index) {
                 $.ajax({
@@ -176,7 +176,7 @@
             });
         }
 
-        /*资讯-审核*/
+        /*文章-审核*/
         function article_shenhe(obj, id) {
             layer.confirm('审核文章？', {
                 btn: ['通过', '不通过', '取消'],
@@ -196,7 +196,7 @@
                     layer.msg('未通过', { icon: 5, time: 1000 });
                 });
         }
-        /*资讯-下架*/
+        /*文章-下架*/
         function article_stop(obj, id) {
             layer.confirm('确认要下架吗？', function (index) {
                 $(obj).parents("tr").find(".td-manage").prepend('<a style="text-decoration:none" onClick="article_start(this,id)" href="javascript:;" title="发布"><i class="Hui-iconfont">&#xe603;</i></a>');
@@ -206,7 +206,7 @@
             });
         }
 
-        /*资讯-发布*/
+        /*文章-发布*/
         function article_start(obj, id) {
             layer.confirm('确认要发布吗？', function (index) {
                 $(obj).parents("tr").find(".td-manage").prepend('<a style="text-decoration:none" onClick="article_stop(this,id)" href="javascript:;" title="下架"><i class="Hui-iconfont">&#xe6de;</i></a>');
@@ -215,7 +215,7 @@
                 layer.msg('已发布!', { icon: 6, time: 1000 });
             });
         }
-        /*资讯-申请上线*/
+        /*文章-申请上线*/
         function article_shenqing(obj, id) {
             $(obj).parents("tr").find(".td-status").html('<span class="label label-default radius">待审核</span>');
             $(obj).parents("tr").find(".td-manage").html("");
