--- a/view/index.html
+++ b/view/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0" />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon" />
     <title>{{.base.Tdk.Title}}-power by goblog</title>
     <meta name="Keywords" content="{{.base.Tdk.Keyword}}">
     <meta name="description" content="{{.base.Tdk.Description}}">
