--- a/view/list.html
+++ b/view/list.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0" />
   <link rel="shortcut icon" href="http://img.qpw9.cn/wx/1.ico" type="image/x-icon" />
-  <title>{{.typeinfo.Name}}-power by goblog</title>
+  <title>{{.typeinfo.Name}}-Powered by DAOatlas and jLab</title>
   <meta name="keywords" content="{dede:field.keywords/}">
   <meta name="description" content="{dede:field.description function='html2text(@me)'/}">
 
