--- a/view/index.html
+++ b/view/index.html
@@ -424,12 +424,10 @@
                         <!--  <mip-adsense ad-client="ca-pub-8152760122334813" ad-width="300" ad-height="300" ad-slot="3502334652" ad-format="auto"></mip-adsense> -->
                         <mip-vd-tabs allow-scroll="">
                             <ul class="list tabs" id="j-newslist">
-                                <li class="tab">最新</li>
+                                <li class="tab">最新3</li>
                                 <!--  下面是分类的列表 -->
-                                {{range $i, $v := .tt}} <li class="tab">{{$v.Name}}</li> {{end}}
+                                {{range $i, $v := .tt3}} <li class="tab">{{$v.Name}}33</li> {{end}}
                             </ul>
-
-
 
 
                             <ul class="article-list tab-list active">
