--- a/view/index.html
+++ b/view/index.html
@@ -426,7 +426,7 @@
                             <ul class="list tabs" id="j-newslist">
                                 <li class="tab">最新3</li>
                                 <!--  下面是分类的列表 -->
-                                {{range $i, $v := .tt3}} <li class="tab">{{$v.Name}}33</li> {{end}}
+                                {{range $i, $v := .tt3}} <li class="tab">{{$v.Name}}</li> {{end}}
                             </ul>
 
 
