--- a/static/view/admin_addview.html
+++ b/static/view/admin_addview.html
@@ -316,20 +316,22 @@
                         tuijian: false,
                         swiper: false,
                     },
-                    daoInputAttr: [{key: 'how_to_join', label: 'how_to_join'},{key: 'discord', label: 'discord'},{key: 'wiki', label: 'wiki'},{key: 'twitter', label: 'twitter'},{key: 'website', label: 'website'},{key: 'forum', label: 'forum'},{key: 'voting', label: 'voting'},{key: 'AUM', label: 'AUM'},{key: 'treasury', label: 'treasury'},{key: 'token_holders', label: 'token_holders'},{key: 'token_link', label: 'token_link'},{key: 'token_name', label: 'token_name'},{key: 'key_contributors', label: 'key_contributors'}, {key: 'name', label: '名称'},{key: 'members', label: '成员'}],
+                    daoInputAttr: [{key: 'summary', label: 'summary'},{key: 'activities', label: 'activities'},{key: 'how_to_join', label: 'how_to_join'},{key: 'discord', label: 'discord'},{key: 'wiki', label: 'wiki'},{key: 'twitter', label: 'twitter'},{key: 'website', label: 'website'},{key: 'forum', label: 'forum'},{key: 'voting', label: 'voting'},{key: 'AUM', label: 'AUM'},{key: 'treasury', label: 'treasury'},{key: 'token_holders', label: 'token_holders'},{key: 'token_link', label: 'token_link'},{key: 'token_name', label: 'token_name'},{key: 'key_contributors', label: 'key_contributors'}, {key: 'name', label: '名称'},{key: 'members', label: '成员'}],
                     
                     daoAttr: {
                         pid: 0,
-                        start_time: 0,
+                        start_time: '',
                         name: '',
+                        activities: '',
+                        summary: '',
                         // image: '',
                         members: '',
                         key_contributors: '',
                         token_name: '',
                         token_link: '',
-                        token_holders: 0,
+                        token_holders: '',
                         treasury: '',
-                        AUM: 0,
+                        AUM: '',
                         voting: '',
                         forum: '',
                         website: '',
