--- a/view/nav.html
+++ b/view/nav.html
@@ -5,7 +5,7 @@
         <span class="fs-4 px-2">DaoAtlas</span>
     </a>
     <ul class="nav">
-        <li class="nav-item"><a href="#" class="nav-link {{if eq .tab "home"}}active {{end}}link-dark py-4">Home</a></li>
+        <li class="nav-item"><a href="/" class="nav-link {{if eq .tab "home"}}active {{end}}link-dark py-4">Home</a></li>
         <li class="nav-item"><a href="/daosPage" class="nav-link {{if eq .tab "daoPost"}}active {{end}}link-dark py-4">DAOs</a></li>
         <li class="nav-item"><a href="/articles" class="nav-link {{if eq .tab "articles"}}active {{end}}link-dark py-4">Articles</a></li>
         <li class="nav-item"><a href="/events" class="nav-link {{if eq .tab "events"}}active {{end}}link-dark py-4">Events</a></li>
