--- a/view/404.html
+++ b/view/404.html
@@ -25,13 +25,13 @@ html {overflow-y:auto}
 <header class="navbar-wrapper">
 	<div class="navbar navbar-black">
 		<div class="container-fluid cl"> 
-            <a class="logo navbar-logo hidden-xs" href="/">DAOatlas</a>
+            <a class="logo navbar-logo hidden-xs" href="/">DAOAtlas</a>
             
              <span class="logo navbar-slogan hidden-xs">DAO &middot; Crypto &middot; Community</span> 
 
 			<nav id="Hui-nav" class="nav navbar-nav">
 				<ul class="cl">
-					<li id="Huinav_1"> <a href="/">DAOatlas Homepage</a> </li>
+					<li id="Huinav_1"> <a href="/">DAOAtlas Homepage</a> </li>
                     {{range $i, $v := .types}}
                     <li id="Huinav_{{$i}}"> <a href="/list/{{$v.ID}}">{{$v.Name}}</a> </li>               {{end}}	 
 				</ul>
