--- a/view/admin_index.html
+++ b/view/admin_index.html
@@ -28,7 +28,7 @@
 <body>
 <header class="navbar-wrapper">
 	<div class="navbar navbar-fixed-top">
-		<div class="container-fluid cl"> <a class="logo navbar-logo f-l mr-10 hidden-xs" href="/">Daoatlas</a> <a class="logo navbar-logo-m f-l mr-10 visible-xs" href="/about.shtml">H-ui</a>
+		<div class="container-fluid cl"> <a class="logo navbar-logo f-l mr-10 hidden-xs" href="/">DAOAtlas</a> <a class="logo navbar-logo-m f-l mr-10 visible-xs" href="/about.shtml">H-ui</a>
 			<span class="logo navbar-slogan f-l mr-10 hidden-xs">v0.1</span>
 			<a aria-hidden="false" class="nav-toggle Hui-iconfont visible-xs" href="javascript:;">&#xe667;</a>
 			<nav class="nav navbar-nav">
@@ -42,7 +42,7 @@
 							<a href="javascript:;" class="dropDown_A">工具 <i class="Hui-iconfont">&#xe6d5;</i></a>
 							<ul class="dropDown-menu menu radius box-shadow">
 								<li>
-									<a href="https://Daoatlas.com" target="_blank">Daoatlas.com</a>
+									<a href="https://DAOAtlas.com" target="_blank">DAOAtlas.com</a>
 								</li>
 
 							</ul>
