--- a/view/login1.html
+++ b/view/login1.html
@@ -78,7 +78,7 @@
       </form>
     </div>
   </div>
-  <div class="footer">Powered by DAOatlas and jLab</div>
+  <div class="footer">Powered by DAOAtlas and jLab</div>
   <script src="https://www.layuicdn.com/layui/layui.js"></script>
   <script>
     layui.use(['form', 'layer'], function () {
