--- a/view/nav.html
+++ b/view/nav.html
@@ -2,7 +2,7 @@
 <header class="d-flex flex-wrap justify-content-center">
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none py-3">
         <img src="/static/imgs/logo.png" alt="" class="d-inline-block">
-        <span class="fs-4 px-2">DaoAtlas</span>
+        <span class="fs-4 px-2">DAOAtlas</span>
     </a>
     <ul class="nav">
         <li class="nav-item"><a href="/" class="nav-link {{if eq .tab "home"}}active {{end}}link-dark py-4">Home</a></li>
