--- a/view/index_old.html
+++ b/view/index_old.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0" />
     <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon" />
-    <title>{{.base.Tdk.Title}}-Powered by DAOatlas and jLab</title>
+    <title>{{.base.Tdk.Title}}-Powered by DAOAtlas and jLab</title>
     <meta name="Keywords" content="{{.base.Tdk.Keyword}}">
     <meta name="description" content="{{.base.Tdk.Description}}">
     <link rel="stylesheet" type="text/css" href="https://c.mipcdn.com/static/v1/mip.css" />
@@ -578,7 +578,7 @@
                             data-title="关于我" title="关于我">关于我</a>. </li>
                     </ul>
                     <div class="copyright ">
-                        Copyright &copy; 2021  Powered by DAOatlas and jLab
+                        Copyright &copy; 2021  Powered by DAOAtlas and jLab
                         <!-- <a href="http://www.miitbeian.gov.cn/" target="_blank " rel="nofollow noopener noreferrer ">
                             {{.base.Tdk.Beian}}
                         </a> | -->
