--- a/view/newlist.html
+++ b/view/newlist.html
@@ -6,7 +6,7 @@
   <meta name="applicable-device" content="pc,mobile" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0" />
-  <title>{{.list.Listinfo.Name}}-Powered by DAOatlas and jLab</title>
+  <title>{{.list.Listinfo.Name}}-Powered by DAOAtlas and jLab</title>
   <meta name="keywords" content="{{.list.Listinfo.Info}}">
   <meta name="description" content="{{.list.Listinfo.Info}}">
 
