fix pic watermark text

--- a/view/index.html
+++ b/view/index.html
@@ -26,7 +26,7 @@
                     <div class="p-4 news-card-1" style="background-image: url({{ (index .newPosts 0 ).Pic }})">
                         <h5 class="card-title">NOV 01</h5>
                         <small>5 min read</small>
-                        <h2 class="mt-4">BanklessDAO a Sample of Future Collaboration.</h2>
+                        <h2 class="mt-4">New Post Today.</h2>
                     </div>
                 </a>
                 <table class="table table-hover mt-3">
@@ -51,7 +51,7 @@
                         <div class="p-4 news-card-2" style="background-image: url({{(index .hotPosts 0 ).Pic}})">
                             <h5 class="card-title">NOV 01</h5>
                             <small>5 min read</small>
-                            <h2 class="mt-4">BanklessDAO a Sample of Future Collaboration.</h2>
+                            <h2 class="mt-4">Hot Post Today.</h2>
                         </div>
                     
                 </a>
