fe fix some bugs

--- a/view/articlesPage.html
+++ b/view/articlesPage.html
@@ -36,14 +36,14 @@
         <div class="text-center mt-5"><a class="link-dark text-decoration-none" href="/articles?page={{.page}}">See More...</a></div>        
     
         <h3 class="text-center mb-4 mt-5">Join the community</h3>
-        <div class="container text-center">
-            <a class="px-3" href=""><img src="imgs/twitter.png" alt=""></a>
-            <a class="px-3" href=""><img src="imgs/discord.png" alt=""></a>
-            <a class="px-3" href=""><img src="imgs/m.png" alt=""></a>
-            <a class="px-3" href=""><img src="imgs/github.png" alt=""></a>
+        <div class="container text-center fs-1">
+            <a class="px-3" href=""><i class="bi bi-twitter"></i></a>
+            <a class="px-3" href=""><i class="bi bi-discord"></i></a>
+            <a class="px-3" href=""><i class="bi bi-medium"></i></a>
+            <a class="px-3" href=""><i class="bi bi-github"></i></a>
         </div>
         <div class="container copy border-top mt-5 pt-3 d-flex  justify-content-between">
-            <div class="text-muted f12 ">&copy2022 DAOAtlas </div>
+            <div class="text-muted f12 ">&copy2021 DAOAtlas </div>
             <div class="text-muted f12 ">Powered by DAOAtlas Genesis</div>
         </div>
     </div>
