--- a/view/articlesDetail.html
+++ b/view/articlesDetail.html
@@ -7,7 +7,7 @@
     <title>{{.base.Tdk.Title}}-DAOAtlas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="/static/dao/css/style.css" rel="stylesheet">
+    <link href="/static/css/front/style.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 </head>
 
@@ -24,14 +24,14 @@
             </div>
         </div>
         <h3 class="text-center mb-4 mt-5"></h3>
-        <div class="container text-center">
-            <a class="px-3" href=""><img src="/static/imgs/twitter.png" alt=""></a>
-            <a class="px-3" href=""><img src="/static/imgs/discord.png" alt=""></a>
-            <a class="px-3" href=""><img src="/static/imgs/m.png" alt=""></a>
-            <a class="px-3" href=""><img src="/static/imgs/github.png" alt=""></a>
+        <div class="container text-center fs-1">
+            <a class="px-3" href=""><i class="bi bi-twitter"></i></a>
+            <a class="px-3" href=""><i class="bi bi-discord"></i></a>
+            <a class="px-3" href=""><i class="bi bi-medium"></i></a>
+            <a class="px-3" href=""><i class="bi bi-github"></i></a>
         </div>
         <div class="container copy border-top mt-5 pt-3 d-flex  justify-content-between">
-            <div class="text-muted f12 ">&copy2022 DAOAtlas </div>
+            <div class="text-muted f12 ">&copy2021 DAOAtlas </div>
             <div class="text-muted f12 ">Powered by DAOAtlas Genesis</div>
         </div>
     </div>
