--- a/view/daoDetail.html
+++ b/view/daoDetail.html
@@ -16,9 +16,9 @@
         {{template "nav.html" .}}
     </div>
     <div class="container page">
-        <nav>DAOs / {{.view.Title}} <nav>
+        <nav>DAOs / DeveloperDAO <nav>
                 <div class="dao-head row  mt-5 mb-5">
-                    <div class="col-md-2 text-center"><img class="img-fluid" src="{{.view.Pic}}" alt=""></div>
+                    <div class="col-md-2 text-center"><img class="img-fluid" src="/static/imgs/logo-daos.png" alt=""></div>
                     <div class="col-md-3">
                         <h2 class="mt-4 text-center">{{.view.Title}}</h2>
                         <div class="mt-4 text-center">
@@ -172,7 +172,7 @@
                     </div>
                 </div>
                 <div class="border-top mt-5 pt-3 d-flex  justify-content-between">
-                    <div class="text-muted f12 ">&copy2022 DAOAtlas </div>
+                    <div class="text-muted f12 ">&copy2021 DAOAtlas </div>
                     <div class="text-muted f12 ">Powered by DAOAtlas Genesis</div>
                 </div>
     </div>
