--- a/view/index.html
+++ b/view/index.html
@@ -48,7 +48,7 @@
                 <h4 class="py-2">Hot</h4>
                 <a class="text-white  text-decoration-none" href="/view/{{(index .hotPosts 0 ).ID}}">
                     
-                        <!-- <div class="p-4 news-card-2" style="background-image: url({{(index .hotPosts 0 ).Pic}})"> -->
+                       
                         <div class="p-4 news-card-2" style="background-image: url('/static/upload/images/20220103/1641218781696.png')">
                             <h5 class="card-title">{{(index .hotPosts 0 ).Title}}</h5>
                             <small>4 min read</small>
@@ -106,14 +106,14 @@
     </div>
     <div class="footer">
         <h3 class="text-center mb-4">Join the community</h3>
-        <div class="container text-center">
-            <a class="px-3" href=""><img src="/static/imgs/twitter.png" alt=""></a>
-            <a class="px-3" href=""><img src="/static/imgs/discord.png" alt=""></a>
-            <a class="px-3" href=""><img src="/static/imgs/m.png" alt=""></a>
-            <a class="px-3" href=""><img src="/static/imgs/github.png" alt=""></a>
+        <div class="container text-center fs-1">
+            <a class="px-3" href=""><i class="bi bi-twitter"></i></a>
+            <a class="px-3" href=""><i class="bi bi-discord"></i></a>
+            <a class="px-3" href=""><i class="bi bi-medium"></i></a>
+            <a class="px-3" href=""><i class="bi bi-github"></i></a>
         </div>
         <div class="container copy border-top mt-5 pt-3 d-flex  justify-content-between">
-            <div class="text-muted f12 ">&copy2022 DAOAtlas </div>
+            <div class="text-muted f12 ">&copy2021 DAOAtlas </div>
             <div class="text-muted f12 ">Powered by DAOAtlas Genesis</div>
         </div>
     </div>
