--- a/view/articlesPage.html
+++ b/view/articlesPage.html
@@ -8,22 +8,23 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
     <link href="/static/css/front/style.css" rel="stylesheet">
+    <link href="/static/css/common.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 </head>
 
 <body class="bg">
-    <div class="container-fluid header">
+    <div class="top-nav header">
         {{template "nav.html" .}}
     </div>
     <div class="container page">
         
         {{range $i, $v := .articleList}}
         <div class="p-5 bg-white rounded-3 shadow-sm mt-4 lh-lg">
-            <h4 class="mb-4"><a href="/view/{{$v.ID}}">{{$v.Title}}</a></h4>
+            <h4 class="mb-4"><a href="/view/{{$v.ID}}" class="art-a">{{$v.Title}}</a></h4>
             <div class="row">
                 <div class="col-md-8">
                     <p>{{$v.Content}}</p>
-                    <div class="text-muted fs-5">Otc 3 · 3 min read</div>  
+                    <div class="text-muted fs-7">Otc 3 · 3 min read</div>  
                 </div>
                 <div class="col-md-4 text-center">
                     <div class="article-cover">
