--- a/view/daosPage.html
+++ b/view/daosPage.html
@@ -8,10 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
     <link href="/static/css/front/style.css" rel="stylesheet">
+    <link href="/static/css/common.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="top-nav">
         {{template "nav.html" .}}
     </div>
 
@@ -26,16 +27,16 @@
             <div class="row ">
                 {{range $i, $v := .daoPosts}}
                 <div class="col-md-4 mb-4">
-                    <div class="dao-card shadow-sm">
+                    <div class="dao-card shadow-sm pos-re">
                         <div class="text-center">
                             <div class="dao-img">
                                 <img src="{{$v.Pic}}" alt="">
                             </div>
                             <h4>{{$v.Title}}</h4>
-                            <p>{{$v.Members}} | Investment</p>
+                            <p class="clr9">{{$v.Members}} | Investment</p>
                         </div>
-                        <p class="px-4">{{$v.Content}}</p>
-                        <div class="d-flex justify-content-center mt-5">
+                        <p class="px-4 p-cnt fs15">{{$v.Content}}</p>
+                        <div class="d-flex justify-content-center more-btn">
                             <a href="/view/{{$v.ID}}" class="read-more px-4 py-2 bg-more text-decoration-none">Read more</a>
                         </div>
                     </div>
