--- a/view/events.html
+++ b/view/events.html
@@ -8,11 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
     <link href="/static/css/front/style.css" rel="stylesheet">
+    <link href="/static/css/common.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 </head>
 
 <body class="bg">
-    <div class="container-fluid header">
+    <div class="top-nav header">
         {{template "nav.html" .}}
     </div>
     <div class="container page">
