--- a/view/index.html
+++ b/view/index.html
@@ -8,15 +8,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
     <link href="/static/css/front/style.css" rel="stylesheet">
+    <link href="/static/css/common.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="top-nav pdlt-1">
         {{template "nav.html" .}}
     </div>
     <div>
-        <img src="/static/imgs/banner_home.jpg" alt="" class="img-fluid">
+        <img src="/static/imgs/banner_home.jpg" alt="" class="img-fluid banner-img">
     </div>
     <div class="container mt-5">
         <div class="row">
@@ -85,16 +86,16 @@
                 <!-- 下面是推荐列表 -->
                 {{range $i, $v := .recommendPosts}}
                 <div class="col-md-4 mb-4">
-                    <div class="dao-card shadow-sm">
+                    <div class="dao-card shadow-sm pos-re">
                         <div class="text-center">
                             <div class="dao-img">
                                 <img src="{{$v.Pic}}" alt="">
                             </div>
                             <h4>{{$v.Title}}</h4>
-                            <p> {{$v.ID}} | Investment</p>
+                            <p class="clr9">{{$v.ID}} | Investment</p>
                         </div>
-                        <p class="px-4">{{$v.Content}}</p>
-                        <div class="d-flex justify-content-center mt-5">
+                        <p class="px-4 p-cnt fs15">{{$v.Content}}</p>
+                        <div class="d-flex justify-content-center more-btn">
                             <a href="/view/{{$v.ID}}" class="read-more px-4 py-2 bg-more text-decoration-none">Read more</a>
                         </div>
                     </div>
