--- a/view/articlesPage.html
+++ b/view/articlesPage.html
@@ -34,7 +34,7 @@
             </div>
         </div>
         {{end}}      
-        <div class="text-center mt-5"><a class="link-dark text-decoration-none" href="/articles?page={{.page}}">See More...</a></div>        
+        <div class="text-center mt-5"><a class="link-dark text-decoration-none" href="/articles?page={{.page}}">More...</a></div>        
     
         <h3 class="text-center mb-4 mt-5">Join the community</h3>
         <div class="container text-center fs-1">
