--- a/view/daosPage.html
+++ b/view/daosPage.html
@@ -33,7 +33,7 @@
                                 <img src="{{$v.Pic}}" alt="">
                             </div>
                             <h4>{{$v.Title}}</h4>
-                            <p class="clr9">{{$v.Members}} | Investment</p>
+                            <p class="clr9">{{$v.Members}} Members | Investment</p>
                         </div>
                         <p class="px-4 p-cnt fs15">{{$v.Content}}</p>
                         <div class="d-flex justify-content-center more-btn">
@@ -44,7 +44,7 @@
                 {{end}}
             </div>
         </div>
-        <div class="text-center mt-5"><a class="link-dark text-decoration-none" href="/daosPage?page={{.page}}&tid={{.tid}}">See More...</a></div>
+        <div class="text-center mt-5"><a class="link-dark text-decoration-none" href="/daosPage?page={{.page}}&tid={{.tid}}">More...</a></div>
     </div>
     <div class="footer">
         <h3 class="text-center mb-4">Join the community</h3>
