--- a/view/events.html
+++ b/view/events.html
@@ -27,7 +27,7 @@
            <div class="text-muted mt-3 fs-5">Otc 3 · 3 min read</div> 
         </div>
         {{end}}
-        <div class="text-center mt-5"><a class="link-dark text-decoration-none" href="/events?page={{.page}}">See More...</a></div>        
+        <div class="text-center mt-5"><a class="link-dark text-decoration-none" href="/events?page={{.page}}">More...</a></div>        
     
         <h3 class="text-center mb-4 mt-5">Join the community</h3>
         <div class="container text-center fs-1">
