--- a/view/index.html
+++ b/view/index.html
@@ -92,7 +92,7 @@
                                 <img src="{{$v.Pic}}" alt="">
                             </div>
                             <h4>{{$v.Title}}</h4>
-                            <p class="clr9">{{$v.ID}} | Investment</p>
+                            <p class="clr9">{{$v.ID}} Members | Investment</p>
                         </div>
                         <p class="px-4 p-cnt fs15">{{$v.Content}}</p>
                         <div class="d-flex justify-content-center more-btn">
@@ -103,7 +103,7 @@
                 {{end}}
             </div>
         </div>
-        <div class="text-center mt-5"><a class="link-dark text-decoration-none" href="/daosPage">See More...</a></div>
+        <div class="text-center mt-5"><a class="link-dark text-decoration-none" href="/daosPage">More...</a></div>
     </div>
     <div class="footer">
         <h3 class="text-center mb-4">Join the community</h3>
