--- a/view/daoDetail.html
+++ b/view/daoDetail.html
@@ -7,7 +7,7 @@
     <title>{{.base.Tdk.Title}}-DAOAtlas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="/static/dao/css/style.css" rel="stylesheet">
+    <link href="/static/css/front/style.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 </head>
 
