--- a/view/jobs.html
+++ b/view/jobs.html
@@ -31,7 +31,7 @@
             <p>There’s no shortage of opportunity for the right people. The DAO will need content creators, media nodes, designers, builders, and people to manage all of these projects.</p>
             <p>At genesis we want to learn more about your skills — what can you do for the DAO? Start by introducing yourself and sharing details about your talents to the #intros channel.</p>
         </div>              -->
-        <div class="text-center mt-5"><a class="link-dark text-decoration-none" href="/jobs?page={{.page}}">See More...</a></div>
+        <div class="text-center mt-5"><a class="link-dark text-decoration-none" href="/jobs?page={{.page}}">More...</a></div>
         <h3 class="text-center mb-4 mt-5">Join the community</h3>
         <div class="container text-center fs-1">
             <a class="px-3" href=""><i class="bi bi-twitter"></i></a>
