--- a/view/nav.html
+++ b/view/nav.html
@@ -12,8 +12,8 @@
             <li class="nav-item"><a href="/daosPage" class="nav-link {{if eq .tab "daoPost"}}active {{end}}link-dark py-4">DAOs</a></li>
             <li class="nav-item"><a href="/articles" class="nav-link {{if eq .tab "articles"}}active {{end}}link-dark py-4">Articles</a></li>
             <li class="nav-item"><a href="/events" class="nav-link {{if eq .tab "events"}}active {{end}}link-dark py-4">Events</a></li>
-            <li class="nav-item"><a href="/jobs" class="nav-link {{if eq .tab "jobs"}}jobs {{end}}link-dark py-4">DAO Jobs</a></li>
-            <li class="nav-item"><a href="/about" class="nav-link {{if eq .tab "about"}}about {{end}}link-dark py-4">About</a></li>                
+            <li class="nav-item"><a href="/jobs" class="nav-link {{if eq .tab "jobs"}}active {{end}}link-dark py-4">DAO Jobs</a></li>
+            <li class="nav-item"><a href="/about" class="nav-link {{if eq .tab "about"}}active {{end}}link-dark py-4">About</a></li>                
         </ul>
     </header>
 </div>
