--- a/view/articlesPage.html
+++ b/view/articlesPage.html
@@ -22,9 +22,9 @@
         <div class="p-5 bg-white rounded-3 shadow-sm mt-4 lh-lg">
             <h4 class="mb-4"><a href="/view/{{$v.ID}}" class="art-a">{{$v.Title}}</a></h4>
             <div class="row">
-                <div class="col-md-8">
-                    <p>{{$v.Content}}</p>
-                    <div class="text-muted fs-7">Otc 3 · 3 min read</div>  
+                <div class="col-md-8 pos-re">
+                    <p class="art-p-cnt">{{$v.Content}}</p>
+                    <div class="text-muted fs-7 pos-ab">Otc 3 · 3 min read</div>  
                 </div>
                 <div class="col-md-4 text-center">
                     <div class="article-cover">
