--- a/view/admin_list.html
+++ b/view/admin_list.html
@@ -92,7 +92,7 @@
                                 <i class="Hui-iconfont">&#xe6de;</i></a> <a style="text-decoration:none" class="ml-5"
                                 onClick="article_edit('文章编辑','/static/view/admin_addview.html?type=edit&id={{$v.ID}}','{{$v.ID}}')"
                                 href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a>
-                            <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')"
+                            <a style="text-decoration:none" class="ml-5" onClick="article_del(this,{{$v.ID}})"
                                 href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a>
                         </td>
                     </tr>
@@ -162,10 +162,11 @@
         function article_del(obj, id) {
             layer.confirm('确认要删除吗？', function (index) {
                 $.ajax({
-                    type: 'POST',
-                    url: '',
+                    type: 'DELETE',
+                    url: '/admin/view/'+id,
                     dataType: 'json',
                     success: function (data) {
+                        console.log('删除', data);
                         $(obj).parents("tr").remove();
                         layer.msg('已删除!', { icon: 1, time: 1000 });
                     },
